<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SketchOfSir</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">画布</string>
    <string name="exit">退出</string>
    <string name="title_activity_edit">EditActivity</string>
    
    <string name="access_pensetting">pen settings</string>
	<string name="access_close_button">close button</string>
    <string name="pen_setting">Pen settings</string>
    <string name="eraser">Eraser settings</string>
	<string name="access_erasersetting">eraser</string>
	<string name="access_clear_button">Clear all button</string>
    <string name="clear_all">Clear all</string>
    <!-- 
	<string name="pen_setting">Pen setting</string>
	<string name="eraser_setting">Eraser setting</string>
	<string name="clear_all">Clear all</string>
	 -->	
</resources>