<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="238.5dp"
	android:layout_height="wrap_content"
	android:clickable="true"
	>
	<!-- 
	<ImageView		
		android:id="@+id/eraser_arrow"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"		
		android:layout_marginLeft="123dp"
		android:background="@drawable/drawingpad_bg_point"
		android:visibility="invisible"/>
	 -->
	<TextView
		android:id="@+id/eraser_top_bg"
		android:layout_width="match_parent"
		android:layout_height="28.5dp"
		android:textSize="13dp"
		android:textColor="#ffffff"
		android:gravity="center"
		android:focusable = "true"
		android:text="@string/eraser"
		android:contentDescription = "@string/access_erasersetting"
		android:background="@drawable/drawingpad_bg_top"/>	
	<ImageButton
		android:id="@+id/btnCloseEraseSetting"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginRight="8dp"
		android:focusable = "true"
		android:nextFocusLeft = "@id/eraser_top_bg"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:contentDescription = "@string/access_close_button"
		android:background="@drawable/drawable_setting_close_btn" />	
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/eraser_top_bg"
		android:background="@drawable/drawingpad_bg_eraser">
		<ImageView
			android:layout_width="158dp"
			android:layout_height="wrap_content"
			android:scaleType="fitXY"
			android:layout_marginTop="28dp"
			android:layout_marginLeft="14.5dp"
			android:src="@drawable/eraser_bar"/>
		<SeekBar
			android:id="@+id/eraser_size_seekbar"
			android:layout_width="158dp" 
			android:layout_height="wrap_content"
			android:layout_marginTop="20.5dp"
			android:layout_marginLeft="14.5dp"
			android:layout_marginRight="4.5dp"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"						
			android:max="88"
			android:thumb="@drawable/drawable_slider_handle"
			android:progressDrawable="@drawable/trasparent"/>
		<ImageView
			android:id="@+id/erase_circle"
			android:layout_width="44.5dp"
			android:layout_height="45.5dp"
			android:layout_marginTop="12dp"
			android:layout_toRightOf="@+id/eraser_size_seekbar"			
			android:background="@drawable/pen_size_bg"
			/>
		<Button
			android:id="@+id/clear_all"
			android:layout_width="221dp"
			android:layout_height="43dp"
			android:layout_marginTop="65.5dp"
			android:layout_marginLeft="6dp"
			android:focusable = "true"
			android:contentDescription ="@string/access_clear_button"
			android:nextFocusUp = "@id/eraser_top_bg"
			android:text="@string/clear_all"
			android:textSize="19dp"						
			android:background="@drawable/drawable_winset_btn"/>		
	</RelativeLayout>   
</RelativeLayout>
