<?xml version="1.0" encoding="utf-8"?>
<!-- "238.5dp" -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/totallayout"
	android:orientation="vertical"
	android:layout_width="238.5dp"
	android:layout_height="wrap_content"
	android:clickable="true">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<!-- 
		<ImageView
			android:id="@+id/arrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="84dp"
			android:background="@drawable/drawingpad_bg_point"
			android:visibility="invisible"/>
		 -->
		<TextView
			android:id="@+id/titlelayout"
			android:layout_width="fill_parent"
			android:layout_height="28.5dp"
			android:gravity="center"
			android:background="@drawable/drawingpad_bg_top"
			android:textColor="#ffffff"
			android:focusable="true"
			android:contentDescription="@string/access_pensetting"
			android:text="@string/pen_setting"/>
		<ImageButton
			android:id="@+id/btnClosePenSetting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginTop="4dp"
			android:layout_marginRight="8dp"
			android:focusable="true"
			android:nextFocusLeft="@id/titlelayout"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/access_close_button"
			android:background="@drawable/drawable_setting_close_btn" />
	</RelativeLayout>
	<FrameLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:id="@+id/parent"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<com.samsung.sdraw.example3.PalleteScrollView
				android:id="@+id/scrollview"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:fadingEdge="none"
				android:scrollbars="none">
				<LinearLayout
					android:id="@+id/bg"
					android:layout_width="match_parent"
					android:layout_height="237dp"
					android:orientation="vertical"
					android:background="@drawable/drawingpad_bg">
					<!-- Stroke preview -->
					<com.samsung.sdraw.CanvasView
						android:id="@+id/strokepreview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="7dp"
						android:layout_marginRight="11dp"
						android:layout_marginTop="5dp"
						android:background="@drawable/popup_paper_01"
						android:padding="0dp"/>
					<!-- Stroke preview -->
					<!-- pen type layout -->
					<LinearLayout
						android:id="@+id/typelayout"
						android:layout_width="wrap_content"
						android:layout_height="54dip"
						android:layout_marginTop="5dp"
						android:layout_marginLeft="7dip"
						android:layout_below="@id/strokepreview"
						android:orientation="horizontal">
						<ImageButton
							android:id="@+id/pentype_1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/drawable_pen_type_1"/>
						<ImageButton
							android:id="@+id/pentype_2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/drawable_pen_type_2"/>
						<ImageButton
							android:id="@+id/pentype_3"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/drawable_pen_type_3"/>
						<ImageButton
							android:id="@+id/pentype_4"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:focusable="false"
							android:background="@drawable/drawable_pen_type_4"/>
					</LinearLayout>
					<!-- pen type layout -->
					<!--  size change layout -->
					<LinearLayout
						android:id="@+id/seeklayout"
						android:layout_width="220dip"
						android:layout_height="wrap_content"
						android:layout_marginTop="4.5dip"
						android:layout_marginLeft="7dip"
						android:orientation="vertical"
						android:layout_below="@id/typelayout">
						<LinearLayout
							android:id="@+id/sizelayout"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content">
						<!--  	<ImageView
								android:id="@+id/colorprogress"
								android:layout_width="165dp"
								android:layout_height="wrap_content"
								android:scaleType="fitXY"
								android:layout_marginTop="20dp"
								android:layout_marginLeft="5.5dip"
								android:src="@drawable/eraser_bar"/>-->
							<SeekBar
								android:id="@+id/pen_size_seekbar"
								android:layout_width="165dp"
								android:layout_height="30dp"
								android:layout_marginTop="11dp"
								android:layout_marginLeft="5.5dip"
								android:paddingTop="2dp"
								android:paddingBottom="4dp"						
								android:paddingLeft="10dp"
								android:paddingRight="10dp"
								android:max="50"
								android:thumb="@drawable/drawable_slider_handle"
								android:progressDrawable="@drawable/drawable_seek_bar"/>			
							<ImageView
								android:id="@+id/penSizeCircle"
								android:layout_width="37dp"
								android:layout_height="37dp"
								android:layout_toRightOf="@+id/pen_size_seekbar"
								android:layout_marginLeft="6dp"
								android:layout_marginTop="5dp"
								android:padding="0dp"
								android:background="@drawable/pen_size_bg"/>			
						</LinearLayout>
						<LinearLayout
							android:id="@+id/alphalayout"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="-3dip"
							android:visibility="gone">
					<!--  		<ImageView
								android:id="@+id/alphaprogress"
								android:layout_width="165dp"
								android:layout_height="wrap_content"
								android:scaleType="fitXY"
								android:layout_marginTop="15dp"
								android:layout_marginLeft="5.5dip"
								android:src="@drawable/eraser_bar"/>-->
							<SeekBar
								android:id="@+id/opa_thickness"
								android:layout_width="165dp"
								android:layout_height="30dp"
								android:layout_marginTop="6dp"
								android:layout_marginLeft="5.5dip"	
								android:paddingTop="2dp"
								android:paddingBottom="4dp"						
								android:paddingLeft="10dp"
								android:paddingRight="10dp"
								android:max="255"
								android:progress="35"
								android:thumb="@drawable/drawable_slider_handle"
								android:progressDrawable="@drawable/drawable_seek_bar"
								/>	
							<RelativeLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_toRightOf="@id/opa_thickness"
								android:layout_marginLeft="6dp"
								android:layout_marginTop="1.5dp">	
								<ImageView
									android:id="@+id/opa_size"
									android:layout_width="36dp"
									android:layout_height="36dp"
									android:layout_centerHorizontal="true"
									android:layout_centerVertical="true"
									android:background="@drawable/pen_size_bg"/>
								<ImageView
									android:id="@+id/opa_bg"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_centerHorizontal="true"
									android:layout_centerVertical="true"
									android:background="@drawable/pen_opacity_bg"/>
								<ImageView
									android:id="@+id/opa"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_centerHorizontal="true"
									android:layout_centerVertical="true"
									android:background="@drawable/pen_opacity_color"/>
								<ImageView					
									android:id="@+id/opa_shadow"		
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_centerHorizontal="true"
									android:layout_centerVertical="true"
									android:background="@drawable/pen_opacity_shadow"/>	
								
							</RelativeLayout>
						</LinearLayout>
					</LinearLayout>
					<!--  size change layout -->
					<!--  color picker layout -->
					<LinearLayout
						android:id="@+id/colorpickerlayout"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="7dip"
						android:layout_marginTop="15dp"
						android:orientation="vertical">
						<com.samsung.sdraw.example3.ColorSelectView
							android:id="@+id/colorpicker"
							android:layout_width="215.5dip"
							android:layout_height="55.5dip"
							android:layout_marginLeft="4dip"
							android:clickable="true"/>
						<com.samsung.sdraw.example3.ColorPickerView
							android:id="@+id/gradience"
							android:layout_width="212dip"
							android:layout_height="51dip"
							android:layout_marginLeft="4dip"
							android:layout_marginTop="1dip"
							android:layout_below="@id/colorpicker"
							android:clickable="true"
							android:visibility="gone"/>
					</LinearLayout>
					<!--  color picker layout -->
					</LinearLayout>
				</com.samsung.sdraw.example3.PalleteScrollView>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/scrollThumbLayout"
			android:layout_width="36dip"
			android:layout_height="match_parent"
			android:visibility="gone"
			android:background="@drawable/drawingpad_bg_04_3"
			android:layout_gravity="right">
			<ImageView
				android:id="@+id/scrollthumb"
				android:layout_marginTop="16.5dip"
				android:layout_marginLeft="4.75dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/drawable_scroll_handle"/>
		</LinearLayout>
	</FrameLayout>
	<LinearLayout
		android:id="@+id/bottomlayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/drawingpad_bg_2_2">
		<ImageButton
			android:id="@+id/expand"
			android:layout_width="30dp"
			android:layout_height="20dp"
			android:focusable="false"
			android:paddingTop="1.25dip"
			android:paddingLeft="7.5dp"
			android:paddingRight="7.5dp"
			android:paddingBottom="2.5dp"
			android:layout_marginLeft="104dip"
			android:src="@drawable/expand_icon_01"
			android:background="#00000000"/>
	</LinearLayout>
</LinearLayout>